@@ -6,7 +6,7 @@ DIST bind-9.5.1-P1.tar.gz 6690710 RMD160 c9830d0fde66fbca13ec4109c80d39ac88df6a5
 DIST bind-9.6.0-P1.tar.gz 6526739 RMD160 4507987e293b79e57ad6b87dd84012030d5b1d6e SHA1 c2b703d05fc768f63f028b0812c46d6eb81c145d SHA256 4ccbd33a5b5c974c2778d5e61eeb4841c04a40904db43ee1ad190c3ed82978a9
 EBUILD bind-tools-9.4.1_p1.ebuild 2134 RMD160 f09c18951394780e2f6f03f8ab6e98c84132e19c SHA1 ad2764e33c64f5d79bddf115c758cd12d1d374f4 SHA256 0b5d457c62878b44ccafde3a364914624cd9274d6a924f22914a51d419923c89
 EBUILD bind-tools-9.4.2_p2.ebuild 2250 RMD160 f1feb5febdeedd7a8f05c398e70a3106169631fd SHA1 3ae884266f3cf193ba93d0cbbf6da6b59aa4dba9 SHA256 d3956f9f5a7d8644b326bdc50db9d6428643072386e9c5e8c2906dab03cda4b2
-EBUILD bind-tools-9.5.1_p1.ebuild 2372 RMD160 7e1cc365d4db49cd10e56befa848ad623dc211d5 SHA1 91b6b9da5362b910e3aff9aecff4c24e7fde8d5d SHA256 94e7d84a6cc1282129dc2a7c1b2863784a381dd14f1164cb07dc037056154a9e
-EBUILD bind-tools-9.6.0_p1.ebuild 2372 RMD160 2957a2296922c006496bc380b9d72e8f228ca164 SHA1 d44736dfec5fa54ea49260154b2a562dda780235 SHA256 4b63daf4af40eca82233997b86d1edb88b855f75d9da4790e632709859160df5
-MISC ChangeLog 17697 RMD160 99e18e259b31280695f8b1a4d5d3726295e7c797 SHA1 c81d1ff796c4777ef1755256a3330e4b975feec4 SHA256 0974f25aeae2a31b996b636aa0af11abde23a1035478ab67f75582a07d3ff83c
+EBUILD bind-tools-9.5.1_p1.ebuild 2375 RMD160 0dc1438cc622628b2ef4cba486173f023a9b5e6a SHA1 a28ca3dc14abbd6d8993e066967f3adcf42ff66e SHA256 088f8fdef6f786b7312484bea8a646b997ff459201c06248c853725c07577b16
+EBUILD bind-tools-9.6.0_p1.ebuild 2375 RMD160 08b0cdc6a3b985510275d71647e593564cce3b32 SHA1 7f8923bc1e1bac63b5f75e64bc37cda3d4a4709b SHA256 f5e79e6ccb6d6a221b440622a3218dc88ba419a1fd8f4a5ac5a354f7ea5b6966
+MISC ChangeLog 17838 RMD160 b6ef44105079edcc5cbd7a545af1c640d95b5942 SHA1 c8be48c74e7ed1b51351d21f0d12a4ddc2ca14cf SHA256 ea58a2e5670178d75e046acab7d95a541eb9291a3877abd4cbbec55baa0e0045
 MISC metadata.xml 334 RMD160 5bf93af61fefc6ad5d6c78fa595fcd70bd35c3a9 SHA1 0f537e70e9ddba477f8cd430f6d24589ba268755 SHA256 5a6b75435f504f86c0ff197f0374e59fbb00c9eb351e39336d07ed67ed54b92d
